--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <span class="logo">Suangga</span>
             <nav>
                 <ul>
-                    <li><a href="">
+                    <li><a href="" class="menu active">
                         <img src="/assets/icon/home.svg" alt=""> Home
                     </a></li>
-                    <li><a href="">
+                    <li><a href="" class="menu">
                         <img src="/assets/icon/user.svg" alt=""> About
                     </a></li>
-                    <li><a href="">
+                    <li><a href="" class="menu">
                         <img src="/assets/icon/book-open.svg" alt=""> Project
                     </a></li>
-                    <li><a href="">
+                    <li><a href="" class="menu">
                         <img src="/assets/icon/mail.svg" alt=""> Contact
                     </a></li>
                 </ul>
@@ -77,5 +77,6 @@
             </div>
         </div>
     </header>
+    <script src="/assets/js/script.js"></script>
 </body>
 </html>
