memperbaiki navbar agar lebih baik

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span class="profesion">
                         front end web
                     </span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Scelerisque tincidunt ac aliquet urna mattis faucibus molestie.</p>
+                    <p>Perkenalkan namaku I Putu Gede suangga Wijanatha, aku akrab dipanggil Suangga. aku sekarang berumur 19 tahun</p>
                     <button class="btn">About me</button>
                 </div>
                 <div class="decoration"></div>
