memperbaiki navbar dan menambah hover

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="navbar">
-            <span class="logo">Suangga</span>
+            <span class="logo"><span class="title-dex">Su</span>angga</span>
             <nav>
                 <ul>
                     <li><a href="" class="menu active">
