--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="say-hello">Hello I,m</span>
                     <h1>Suangga Wijanatha</h1>
                     <span class="profesion">
-                        front end web
+                        Web and UI Designer
                     </span>
                     <p>Perkenalkan namaku I Putu Gede suangga Wijanatha, aku akrab dipanggil Suangga. aku sekarang berumur 19 tahun</p>
                     <button class="btn">About me</button>
