n=meperbaiki my skill

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
             </div>
             <div class="skill">
                 <h2>My <span class="title-dex">Skill</span></h2>
-                <div class="gambar">
+                <div class="skill-img">
                     <img src="/assets/image/html.jpg" alt="">
                     <img src="/assets/image/css.jpg" alt="">
                     <img src="/assets/image/javascript.jpg" alt="">
                     <img src="/assets/image/php.jpg" alt="">
                     <img src="/assets/image/rect js.jpg" alt="">
                 </div>
-                
+                <div class="decoration"></div>
             </div>
         </div>
     </header>
