--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                     <img src="/assets/image/javascript.jpg" alt="">
                     <img src="/assets/image/php.jpg" alt="">
                     <img src="/assets/image/rect js.jpg" alt="">
+                    <img src="/assets/image/laravel.jpg" alt="">
+                    <img src="/assets/image/figma.jpg" alt="">
                 </div>
                 <div class="decoration"></div>
             </div>
