menambahkan portofolio.css dan footer.css

--- a/index.html
+++ b/index.html
@@ -77,8 +77,18 @@
                 </div>
                 <div class="decoration"></div>
             </div>
+            <div class="portofolio">
+                <h2>My <span class="title-dex">Portofolio</span></h2>
+                <div class="portofolio-img">
+                    <img src="/assets/image/portofolio.jpg" alt="" class="potrto">
+                    <img src="/assets/image/portofolio.jpg" alt="" class="potrto">
+                    <img src="/assets/image/portofolio.jpg" alt="" class="potrto">
+                    <span class="potrto">aa</span>
+                </div>
+            </div>
         </div>
     </header>
+    <footer>suanggawijanatha_portofolio - @2022</footer>
     <script src="/assets/js/script.js"></script>
 </body>
 </html>
