menambahkan portofolio/index.html dan contact/index.html

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
             <span class="logo"><span class="title-dex">Su</span>angga</span>
             <nav>
                 <ul>
-                    <li><a href="" class="menu active">
+                    <li><a href="/" class="menu active">
                         <img src="/assets/icon/home.svg" alt=""> Home
                     </a></li>
                     <li><a href="" class="menu">
                         <img src="/assets/icon/user.svg" alt=""> About
                     </a></li>
-                    <li><a href="" class="menu">
+                    <li><a href="/portofolio/" class="menu">
                         <img src="/assets/icon/book-open.svg" alt=""> Project
                     </a></li>
-                    <li><a href="" class="menu">
+                    <li><a href="/contact/" class="menu">
                         <img src="/assets/icon/mail.svg" alt=""> Contact
                     </a></li>
                 </ul>
             </nav>
             <div class="medsos">
-                <a href=""><img src="/assets/icon/github.svg" alt=""></a>
+                <a href="https://github.com/suanggawija"><img src="/assets/icon/github.svg" alt=""></a>
                 <a href=""><img src="/assets/icon/twitter.svg" alt=""></a>
-                <a href=""><img src="/assets/icon/instagram.svg" alt=""></a>
+                <a href="https://www.instagram.com/suangga_ikzz"><img src="/assets/icon/instagram.svg" alt=""></a>
                 <a href=""><img src="/assets/icon/linkedin.svg" alt=""></a>
             </div>
         </div>
@@ -57,8 +57,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae est, sit tortor arcu orci, nisl diam ut gravida. Lorem euismod tincidunt ultrices vivamus eget. In leo eu elit porttitor amet morbi lacus. Adipiscing malesuada euismod integer eget imperdiet. A condimentum urna ac faucibus elementum posuere sem massa.</p>
                     <span class="medsos-text">Meda Sosial</span>
                     <div class="medsos">
-                        <a href=""><img src="/assets/icon/github.svg" alt=""></a>
-                        <a href=""><img src="/assets/icon/instagram.svg" alt=""></a>
+                        <a href="https://github.com/suanggawija"><img src="/assets/icon/github.svg" alt=""></a>
+                        <a href="https://www.instagram.com/suangga_ikzz"><img src="/assets/icon/instagram.svg" alt=""></a>
                         <a href=""><img src="/assets/icon/twitter.svg" alt=""></a>
                         <a href=""><img src="/assets/icon/linkedin.svg" alt=""></a>
                     </div>
@@ -83,7 +83,9 @@
                     <img src="/assets/image/portofolio.jpg" alt="" class="potrto">
                     <img src="/assets/image/portofolio.jpg" alt="" class="potrto">
                     <img src="/assets/image/portofolio.jpg" alt="" class="potrto">
-                    <span class="potrto">aa</span>
+                    <span class="potrto">
+                        <a href="/portofolio/" class=" btn" >Lern More</a>
+                    </span>
                 </div>
             </div>
         </div>
