--- a/contact/index.html
+++ b/contact/index.html
@@ -35,7 +35,12 @@
             </div>
         </div>
         <div class="contact">
-
+            <h2>My <span class="title-dex">Contact</span></h2>
+            <form action="">
+                <input type="email" class="email" id="email" placeholder="alamat email kamu ...">
+                <input type="text" class="pesan" id="pesan" placeholder="tulis pesan kamu ....">
+                <button type="submit" class="btn">Kirim</button>
+            </form>
         </div>
     </header>
     <footer>suanggawijanatha_portofolio - @2022</footer>
