--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,7 @@
                     <li><a href="/" class="menu ">
                         <img src="/assets/icon/home.svg" alt=""> Home
                     </a></li>
-                    <li><a href="" class="menu">
+                    <li><a href="/#about" class="menu">
                         <img src="/assets/icon/user.svg" alt=""> About
                     </a></li>
                     <li><a href="/portofolio/" class="menu" active>
