--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="/" class="menu active">
                         <img src="/assets/icon/home.svg" alt=""> Home
                     </a></li>
-                    <li><a href="" class="menu">
+                    <li><a href="#about" class="menu">
                         <img src="/assets/icon/user.svg" alt=""> About
                     </a></li>
                     <li><a href="/portofolio/" class="menu">
@@ -50,7 +50,7 @@
                 </div>
                 <div class="decoration"></div>
             </div>
-            <div class="about">
+            <div class="about" id="about">
                 <h2>About <span class="title-dex">Me</span></h2>
                 <img src="/assets/image/user 2.jpg" alt="" class="user">
                 <h1>Suangga Wijanatha</h1>
